--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -37,6 +37,7 @@ header {
     border-bottom: 5px solid #ddf7ff;
 
     h1 {
+        text-align: center;
         font-weight: 600;
         font-size: 32px;
         text-decoration: underline solid;
