--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -31,7 +31,7 @@ body {
 }
 
 header {
-    height: 70px;
+    min-height: 70px;
     @extend %displayFlex;
     background-color: #00BFFF;
     border-bottom: 5px solid #ddf7ff;
@@ -70,7 +70,8 @@ main:not(#elementDescribe) {
         }
 
         i {
-            transition: color .6s ease;
+            margin-left: 5px;
+            transition: all .6s ease;
         }
 
         &:hover {
@@ -80,6 +81,11 @@ main:not(#elementDescribe) {
             i {
                 color: #0077BE;
             }
+        }
+
+        &.compact {
+            @extend %displayFlex;
+            justify-content: end;
         }
 
         @media (max-width: 360px) {
